--- a/modules-available/locationinfo/templates/location-info.html
+++ b/modules-available/locationinfo/templates/location-info.html
@@ -26,13 +26,13 @@
 					<td id="url-{{serverid}}" nowrap>{{serverurl}}</td>
 
 					<td align="center" id="credentials-{{serverid}}" style="white-space:nowrap;">
-						<button class="btn btn-sm {{^autherror}}btn-success{{/autherror}}{{#autherror}}btn-danger{{/autherror}}"
-								  id="credentials-btn-{{serverid}}" type="button" onclick="loadSettingsModal({{serverid}},'{{servername}}');">
+						<button class="btn btn-sm {{^autherror}}btn-success{{/autherror}}{{#autherror}}btn-danger{{/autherror}}" {{disabled}}
+								id="credentials-btn-{{serverid}}" type="button" onclick="loadSettingsModal({{serverid}},'{{servername}}');">
 							<span style="margin-right: 5px;" class="glyphicon glyphicon-cog"></span>
 							{{lang_locationSettings}}
 						</button>
-						<button class="btn btn-sm btn-primary table-refresh" id="refresh-btn-{{serverid}}"
-								  title="{{lang_refresh_title}}" onclick="refreshButtonClick({{serverid}});">
+						<button class="btn btn-sm btn-primary table-refresh" id="refresh-btn-{{serverid}}" {{disabled}}
+								title="{{lang_refresh_title}}" onclick="refreshButtonClick({{serverid}});">
 							<span id="refresh-btn-animate-{{serverid}}" style="margin-right: 5px;"
 									class="glyphicon glyphicon-refresh"></span>
 							{{lang_refresh}}
