[locationinfo] Rename tables to use module name as prefix; room -> location

--- a/modules-available/locationinfo/templates/config.html
+++ b/modules-available/locationinfo/templates/config.html
@@ -36,7 +36,7 @@
 									<label>{{lang_roomId}}</label>
 								</div>
 								<div class="col-sm-7">
-									<input class="form-control" name="serverroomid" id="serverroomid" value="{{serverroomid}}">
+									<input class="form-control" name="serverlocationid" id="serverlocationid" value="{{serverlocationid}}">
 								</div>
 								<div class="col-sm-2">
 									<a class="btn btn-default helptext" title="{{lang_roomIdTooltip}}">
