--- a/modules-available/locationinfo/templates/timetable.html
+++ b/modules-available/locationinfo/templates/timetable.html
@@ -1,6 +1,6 @@
 <div>
 	<div align="right">
-		<label for="CB_1" title="{{lang_expertMode_title}}">{{lang_expertMode}}</label>
+		<label for="CB_1">{{lang_expertMode}}</label>
 		<input class="bs-switch" name="1" id="CB_1" type="checkbox" {{#expertMode}}checked{{/expertMode}}>
 	</div>
 	<br>
