[permissionmanager] added possibility to get a list of allowed locations for a given permission + bugfixes

--- a/modules-available/permissionmanager/style.css
+++ b/modules-available/permissionmanager/style.css
@@ -46,8 +46,12 @@
     margin: 0;
 }
 
-.disabled {
+.faded {
     opacity: 0.6;
+}
+
+.unclickable {
+    pointer-events: none;
 }
 
 input[type='checkbox']:disabled {
