--- a/modules-available/baseconfig/templates/_page.html
+++ b/modules-available/baseconfig/templates/_page.html
@@ -25,18 +25,22 @@
 					<div class="row">
 						<div class="col-md-5 slx-cfg-toggle">
 							<div>{{setting}}</div>
-							{{^override}}
 							<div class="slx-default">
+								{{#defaultvalue}}{{lang_defaultValue}}:{{/defaultvalue}}
 								{{defaultvalue}}
 							</div>
-							<input class="bs-switch" name="override[{{setting}}]" id="CB_{{setting}}" type="checkbox" {{checked}}> <label for="CB_{{setting}}">{{lang_settingActive}}</label>
-							{{/override}}
-							{{#override}}
-							<input class="bs-switch" name="override[{{setting}}]" id="CB_{{setting}}" type="checkbox" {{checked}}> <label for="CB_{{setting}}">{{lang_enableOverride}}</label>
-							{{/override}}
+							<input class="bs-switch" name="override[{{setting}}]" id="CB_{{setting}}" type="checkbox" {{checked}}>
+							<label for="CB_{{setting}}">
+								{{#override}}{{lang_enableOverride}}{{/override}}
+								{{^override}}{{lang_settingActive}}{{/override}}
+							</label>
 						</div>
 						<div class="col-md-5">
 							{{{item}}}
+							<div class="slx-default">
+								{{#defaultsource}}{{lang_inheritSource}}:{{/defaultsource}}
+								{{defaultsource}}
+							</div>
 						</div>
 						<div class="col-md-2">
 							<a class="btn btn-default" data-toggle="modal" data-target="#help-{{setting}}"><span class="glyphicon glyphicon-question-sign"></span></a>
