[locationinfo] Open panel in new window

--- a/modules-available/locationinfo/templates/location-info.html
+++ b/modules-available/locationinfo/templates/location-info.html
@@ -62,7 +62,7 @@
 		<tr id="row{{locationid}}">
 			<td>
 				<div style="display:inline-block;width:{{depth}}em"></div>
-				<a href="modules/locationinfo/frontend/doorsign.html?id={{locationid}}">{{locationname}}</a>
+				<a href="modules/locationinfo/frontend/doorsign.html?id={{locationid}}" target="_blank">{{locationname}}</a>
 			</td>
 			<td align="center">
 				<div class="checkbox" style="margin:0">
