[statistics_reporting] Add link to wiki explaining remote reporting in detail

--- a/modules-available/statistics_reporting/templates/columnChooser.html
+++ b/modules-available/statistics_reporting/templates/columnChooser.html
@@ -76,6 +76,7 @@
 				</div>
 				<div>
 					<p>{{lang_reportingDescription}}</p>
+					<p><a href="https://www.bwlehrpool.de/doku.php/satellite/statistics_reporting" target="_blank">{{lang_reportMoreInfo}}</a></p>
 					<a class="btn btn-success" href="?do=statistics_reporting&amp;action=getreport">{{lang_downloadReport}}</a>
 				</div>
 			</div>
